# ledger

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  TESTING_STRATEGY.md
.github/: copilot-instructions.md
.github/workflows/: opencode.yml
benches/: pow.rs
crates/ledger-cli/: Cargo.toml
crates/ledger-cli/src/: main.rs
crates/ledger-core/: Cargo.toml
crates/ledger-core/src/: constants.rs  lib.rs  mine.rs
crates/ledger-node/: Cargo.toml
crates/ledger-node/src/: constants.rs  main.rs
crates/ledger-storage/: Cargo.toml
crates/ledger-storage/src/: lib.rs  sled_store.rs
crates/ledger-storage/tests/: helpers.rs  storage_integration.rs
crates/ledger-tui/: Cargo.toml  README.md
crates/ledger-tui/src/: main.rs
scripts/data/: add_chains.zsh  add_tx_batch.zsh
scripts/k6/: submit_tx.js
