[workspace]
resolver = "2"
members = [
    "crates/ledger-core",
    "crates/ledger-storage",
    "crates/ledger-node",
    "crates/ledger-cli",
    "crates/ledger-tui",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["LGR Capstone Project - Gary Smith <scopevale@gmail.com>"]
rust-version = "1.90"

[workspace.dependencies]
# core
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.65"
anyhow = "1.0.100"
hex = "0.4.3"
sha2 = "0.10.8"
rand = "0.8.5"

# async / web
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
axum = { version = "0.8.6", features = ["macros", "json"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "ansi"] }
hyper = { version = "1.7.0", features = ["http1", "http2", "server", "client"] }
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }

# storage
sled = "0.34.7"

# benches
criterion = "0.7.0"
