[package]
name = "ledger-core"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3.3.0"
tokio = { workspace = true }
