[package]
name = "ledger-node"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ledger-core = { path = "../ledger-core" }
ledger-storage = { path = "../ledger-storage" }
anyhow = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }
