[package]
name = "ledger-storage"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
ledger-core = { path = "../ledger-core" }
sled = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
bincode = "1.3.3"
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = "3.3.0"
tokio = { workspace = true }
