[package]
name = "ledger-tui"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Terminal UI for the minimal Rust ledger node"
repository = ""
authors = ["LGR Capstone Project - Gary Smith <scopevale@gmail.com>"]

[dependencies]
ledger-core = { path = "../ledger-core" }
anyhow = "1.0.93"
crossterm = "0.28.1"
ratatui = { version = "0.28.1", default-features = false, features = ["crossterm"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.3", features = ["json", "rustls-tls"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
clap = { version = "4.5.21", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "ansi"] }
hex = "0.4.3"
sha2 = "0.10.8"
urlencoding = "2.1.3"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
